src/components/UserCard/UserCard.module.scss
@import '../../index.scss';
.userCard {
  display: flex;
  padding: 48px;
  background: var(--container_bg_color);
  border-radius: 15px;
  max-width: 730px;
  width: 100%;
  gap: 37px;

  border-radius: 15px;
  @include mq(1024px) {
    max-width: 573px;
    padding: 40px;
  }
  @include mq(768px) {
    max-width: 573px;
    padding-inline: 24px;
    padding-top: 32px;
    padding-bottom: 48px;
  }
  .avatar {
    flex-basis: 25%;
    img {
      border-radius: 50%;
    }
    @include mq(1024px) {
      display: none;
    }
  }
  .card {
    width: 100%;

    .tag {
      font-weight: 400;
      font-size: 16px;
      line-height: 24px;
      color: #0079ff;
      margin-bottom: 20px;
      @include mq(1024px) {
        margin-bottom: 0px;
      }
      @include mq(768px) {
        font-size: 13px;
        line-height: 19px;
        margin-bottom: 6px;
      }
    }
    .bio {
      font-weight: 400;
      font-size: 15px;
      line-height: 25px;
      color: var(--bio_Text_color);
      mix-blend-mode: normal;
      opacity: 0.75;
      margin-bottom: 32px;
      @include mq(1024px) {
        margin-top: 24px;
      }
      @include mq(768px) {
        font-size: 13px;
        line-height: 25px;
        margin-bottom: 24px;
        margin-top: 33px;
      }
    }

    .info {
      display: flex;
      gap: 25px;
      margin-bottom: 37px;

      justify-content: space-between;
      background: var(--body_bg_color);
      border-radius: 10px;
      padding-top: 15px;
      padding-bottom: 17px;
      padding-inline: 32px;
      max-width: 480px;
      @include mq(1024px) {
        max-width: 493px;
      }
      @include mq(768px) {
        padding-block: 18px;
        padding-inline: 15px;
        margin-bottom: 24px;
        gap: 0;
      }
      .info_about {
        &:nth-child(2) {
          margin-left: -10px;
        }
        flex: 1;
        .info_num {
          font-size: 13px;
          font-weight: 400;
          color: var(--input_color);
          line-height: 19px;
          @include mq(768px) {
            font-size: 11px;
            line-height: 16px;
            margin-bottom: 9px;
            text-align: center;
          }
        }
        .count {
          font-weight: 700;
          font-size: 22px;
          line-height: 33px;
          text-transform: uppercase;
          color: var(--heading_color);
          @include mq(768px) {
            font-size: 16px;
            line-height: 24px;
            text-align: center;
          }
        }
      }
    }

    .registration {
      display: flex;
      align-items: flex-start;
      justify-content: space-between;
      @include mq(1024px) {
        gap: 41px;
        justify-content: left;
        align-items: center;
      }
      @include mq(768px) {
        gap: 19.5px;
      }
      .avatar_tab {
        display: none;
        img {
          border-radius: 50%;
        }
        width: 117px;
        height: 117px;
        @include mq(1024px) {
          display: block;
        }
        @include mq(768px) {
          width: 70px;
          height: 70px;
        }
      }
      .name {
        font-family: 'Space Mono';
        font-style: normal;
        font-weight: 700;
        font-size: 26px;
        line-height: 39px;
        color: var(--textColor);
        @include mq(768px) {
          font-size: 16px;
          line-height: 24px;
        }
      }
      .joined {
        font-family: 'Space Mono';
        font-style: normal;
        font-weight: 400;
        font-size: 15px;
        line-height: 22px;
        text-align: right;
        color: #ffffff;
        white-space: nowrap;
        margin-top: 6px;
        display: none;
        @include mq(1024px) {
          display: block;
          text-align: left;
          margin-top: 0px;
        }
        @include mq(768px) {
          font-size: 13px;
          line-height: 19px;
        }
      }
      .joined_tab {
        font-weight: 400;
        font-size: 15px;
        line-height: 22px;
        text-align: right;
        color: var(--para_color);
        white-space: nowrap;
        margin-top: 6px;

        @include mq(1024px) {
          display: none;
        }
      }
    }
  }
}
.user_info {
  max-width: 480px;
  display: flex;
  gap: 56px;
  align-items: center;
  flex-wrap: wrap;
  @include mq(768px) {
    flex-wrap: wrap;
    gap: 16px;
  }
  .user_info_contact {
    display: flex;
    flex-direction: column;
    // flex-basis: 50%;
    gap: 19px;

    @include mq(768px) {
      gap: 16px;
    }
    .user_contact {
      display: flex;
      align-items: center;

      p,
      a {
        font-weight: 400;
        font-size: 15px;
        line-height: 22px;
        color: var(--input_color);
        margin-left: 16px;
        @include mq(768px) {
          font-size: 13px;
          line-height: 19px;
          margin-left: 13px;
          white-space: nowrap;
        }
      }
      .link,
      a {
        text-decoration: none;
        &:hover {
          cursor: pointer;
          text-decoration: underline;
          text-underline-offset: 3px;
        }
      }
      .city {
        margin-left: 18px;
      }
    }
  }
}

